# CR5_ROS

./: README-CN.md  README.md
bringup/: CMakeLists.txt  package.xml
bringup/src/: cr5_robot.cpp  main.cpp  tcp_socket.cpp
bringup/srv/: SpeedJ.srv
cr3_moveit/: .setup_assistant  package.xml
cr3_moveit/config/: ros_controllers.yaml
cr3_moveit/launch/: cr3_moveit.launch  demo.launch  demo_gazebo.launch  gazebo.launch  planning_context.launch
cr5_bringup/: CMakeLists.txt  package.xml
cr5_bringup/include/cr5_bringup/: commander.h  cr5_robot.h
cr5_bringup/launch/: cr5_bringup.launch  cr_bringup.launch
cr5_bringup/msg/: JointMovJ.msg  RelMovJ.msg  ServoJ.msg
cr5_bringup/src/: cr5_robot.cpp  main.cpp  tcp_socket.cpp
cr5_bringup/srv/: DO.srv  ToolDOExecute.srv
cr5_description/: CMakeLists.txt  package.xml
cr5_description/launch/: display.launch  gazebo.launch
cr5_description/meshes/: Link1.dae  Link3.dae  Link4.dae  Link5.dae
cr5_description/rviz/: urdf.rviz
cr5_description/urdf/: cr3_robot.urdf  cr5_robot.urdf  cr5robot.urdf
cr5_moveit/: .setup_assistant  package.xml
cr5_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
cr5_moveit/launch/: cr5_robot_moveit_controller_manager.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
cr5robot/: package.xml
dobot_bringup/: CMakeLists.txt  package.xml
dobot_bringup/launch/: bringup.launch
dobot_bringup/src/: cr5_robot.cpp  main.cpp  tcp_socket.cpp
dobot_description/: package.xml
dobot_description/launch/: display.launch
dobot_description/urdf/: cr3_robot.urdf  cr5_robot.urdf
dobot_moveit/: package.xml
moveit/: CMakeLists.txt  package.xml
rviz_cr5control/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_cr5control/src/: rviz_cr5control.cpp  rviz_cr5control.h
rviz_dobot_control/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_dobot_control/src/: rviz_dobot_control.cpp
(+5 files in other folders)
