<?xml version="1.0"?>
<package format="2">
  <name>cr5robot</name>
  <version>1.0.0</version>
  <description>The cr5robot package</description>

  <maintainer email="zhangran@tdobot.cc">zhangran</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
